--- a/IoTFeverGame/Base.lproj/Main.storyboard
+++ b/IoTFeverGame/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 </state>
                                 <connections>
                                     <action selector="start:" destination="omm-4A-DGb" eventType="touchUpInside" id="Njw-Jn-kSG"/>
-                                    <segue destination="RYh-ta-kXl" kind="show" id="DOm-8p-crW"/>
+                                    <segue destination="gTa-we-meE" kind="show" id="nxF-YB-8jm"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYN-gg-OYK">
@@ -82,6 +82,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H42-ZH-FTl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="506" y="-74"/>
+        </scene>
+        <!--Sensor Tag Initialization View Controller-->
+        <scene sceneID="a9p-WQ-qd4">
+            <objects>
+                <viewController id="gTa-we-meE" customClass="SensorTagInitializationViewController" customModule="IoTFeverGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="huh-mv-5y6"/>
+                        <viewControllerLayoutGuide type="bottom" id="2cE-BR-2ld"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="15q-re-xd2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="FnX-ww-uqH">
+                                <rect key="frame" x="150" y="219" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r8I-nr-iXb">
+                                <rect key="frame" x="118" y="269" width="84" height="30"/>
+                                <state key="normal" title="Start Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="RYh-ta-kXl" kind="show" id="ae7-se-zlA"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="activityLoader" destination="FnX-ww-uqH" id="WNd-5f-ISc"/>
+                        <outlet property="startButton" destination="r8I-nr-iXb" id="fnr-3c-d3I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kct-al-g1D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="118" y="626"/>
         </scene>
         <!--IoT Fever Game View Controller-->
         <scene sceneID="OY3-8b-D8P">
@@ -146,11 +182,12 @@
                         <outlet property="try1Image" destination="Zry-uh-sMB" id="zDe-DN-yl6"/>
                         <outlet property="try2Image" destination="rK9-aF-igB" id="o0G-4W-emf"/>
                         <outlet property="try3Image" destination="s0s-8t-MCP" id="10j-Ov-Be7"/>
+                        <outlet property="view" destination="9R3-z3-NvJ" id="JfY-Ka-eNK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yVV-OK-11y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="118" y="590"/>
+            <point key="canvasLocation" x="118" y="1308"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dW8-mv-Fvw">
