--- a/IoTFeverGame/Base.lproj/Main.storyboard
+++ b/IoTFeverGame/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 </state>
                                 <connections>
                                     <action selector="start:" destination="omm-4A-DGb" eventType="touchUpInside" id="Njw-Jn-kSG"/>
-                                    <segue destination="gTa-we-meE" kind="show" id="nxF-YB-8jm"/>
+                                    <segue destination="RYh-ta-kXl" kind="show" id="U8M-e9-Us5"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYN-gg-OYK">
@@ -83,42 +83,6 @@
             </objects>
             <point key="canvasLocation" x="506" y="-74"/>
         </scene>
-        <!--Sensor Tag Initialization View Controller-->
-        <scene sceneID="a9p-WQ-qd4">
-            <objects>
-                <viewController id="gTa-we-meE" customClass="SensorTagInitializationViewController" customModule="IoTFeverGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="huh-mv-5y6"/>
-                        <viewControllerLayoutGuide type="bottom" id="2cE-BR-2ld"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="15q-re-xd2">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="FnX-ww-uqH">
-                                <rect key="frame" x="150" y="219" width="20" height="20"/>
-                            </activityIndicatorView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r8I-nr-iXb">
-                                <rect key="frame" x="118" y="269" width="84" height="30"/>
-                                <state key="normal" title="Start Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="RYh-ta-kXl" kind="show" id="ae7-se-zlA"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <outlet property="activityLoader" destination="FnX-ww-uqH" id="WNd-5f-ISc"/>
-                        <outlet property="startButton" destination="r8I-nr-iXb" id="fnr-3c-d3I"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kct-al-g1D" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="118" y="626"/>
-        </scene>
         <!--IoT Fever Game View Controller-->
         <scene sceneID="OY3-8b-D8P">
             <objects>
@@ -161,13 +125,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HUj-WY-09z">
                                 <rect key="frame" x="265" y="455" width="15" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="90" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hjg-DZ-wwj">
                                 <rect key="frame" x="103" y="455" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -187,7 +151,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yVV-OK-11y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="118" y="1308"/>
+            <point key="canvasLocation" x="118" y="650"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dW8-mv-Fvw">
